--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>LocationTransmission</title>
-  <base href="/LocationTransmission/">
+  <base href="/eee">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
@@ -13,6 +13,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.24d74129d9aa50629ccd.js" defer></script><script src="polyfills.98e298f0f2b8e2646bce.js" defer></script><script src="main.08267ab40e564bfb569a.js" defer></script>
+<script src="runtime.24d74129d9aa50629ccd.js" defer></script><script src="polyfills.98e298f0f2b8e2646bce.js" defer></script><script src="main.fd15bafa59c38fa3e609.js" defer></script>
 
 </body></html>
