--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
   <base href="/LocationTransmission/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script async="" defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDN1Y4opDvVP4dwlA29YKzBrI5hSvyUu78" type="text/javascript"></script>
+
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-touch-fullscreen" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Skuup">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <style>body,html{height:100%;}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif;}</style><link rel="stylesheet" href="styles.787a40831f900fe643f6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.787a40831f900fe643f6.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.24d74129d9aa50629ccd.js" defer></script><script src="polyfills.98e298f0f2b8e2646bce.js" defer></script><script src="main.4ff6ad7ca2f817df26ea.js" defer></script>
+  <script async="" defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDN1Y4opDvVP4dwlA29YKzBrI5hSvyUu78&amp;libraries=places&amp;language=ja"></script>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="runtime.24d74129d9aa50629ccd.js" defer></script><script src="polyfills.98e298f0f2b8e2646bce.js" defer></script><script src="main.c0527a527dee5cfd720a.js" defer></script>
 
 </body></html>
