--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>GoogleMapExample</title>
+  <title>LocationTransmission</title>
   <base href="/LocationTransmission/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -10,11 +10,13 @@
   <meta name="apple-mobile-web-app-title" content="Skuup">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 <style>body,html{height:100%;}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif;}</style><link rel="stylesheet" href="styles.10dcdd3c6f88398b76ef.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.10dcdd3c6f88398b76ef.css"></noscript></head>
 <body>
   <app-root></app-root>
   <script async="" defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDN1Y4opDvVP4dwlA29YKzBrI5hSvyUu78&amp;libraries=places&amp;language=ja"></script>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.5807b7940d1ba9d94d17.js" defer></script><script src="polyfills.98e298f0f2b8e2646bce.js" defer></script><script src="main.395696f9cff2010b92a4.js" defer></script>
+<script src="runtime.5807b7940d1ba9d94d17.js" defer></script><script src="polyfills.98e298f0f2b8e2646bce.js" defer></script><script src="main.37c5b5cb6629b03fd511.js" defer></script>
 
 </body></html>
