--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-touch-fullscreen" content="yes">
-  <meta name="apple-mobile-web-app-title" content="Skuup">
+  <meta name="apple-mobile-web-app-title" content="LocationTransmission">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 <style>body,html{height:100%;}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif;}</style><link rel="stylesheet" href="styles.10dcdd3c6f88398b76ef.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.10dcdd3c6f88398b76ef.css"></noscript></head>
